[package]
name = "hsgf"
version = "0.1.0"
authors = ["Colin Kolbe"]
description = "HSGF - Hierarchical Search Graph Framework (2025)"
edition = "2021"

[lib]
name = "hsgf"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
test = true
doc = true

[dependencies]
graphidx = { path = "GraphIndexAPI", default-features = false }
graphidxbaselines = { path = "GraphIndexBaselines", default-features = false }
rayon = "1.7.0"
foldhash = "0.1.4"
rand = "0.8.5"
num = "0.4.0"
paste = "1.0.12"
vecs_file = "0.1.0"
ndarray = "0.15"
ndarray-rand = "0.14.0"
itertools = "0.14.0"
numpy = { version = "0.23.0", optional = true }
pyo3 = { version = "0.23.4", features = [
    "extension-module",
    "multiple-pymethods",
    "abi3-py38",
], optional = true }

[features]
python = [
    "pyo3/extension-module",
    "numpy",
    "graphidxbaselines/python",
    "measure-print-hsgf-level-times",
]
measure-print-hsgf-level-times = []
sort-ids = []
default = []

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[profile.test]
inherits = "release"

[profile.bench]
inherits = "release"

[profile.profiling]
inherits = "release"
opt-level = 3
debug = true
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[[bench]]
name = "all_graphs"
harness = false
